Correct small layout problems in IE

--- a/WebContent/vle/css/navigation.css
+++ b/WebContent/vle/css/navigation.css
@@ -74,7 +74,7 @@ p  {font-size:.8em; line-height:150%;padding:0px; margin:0px;}
 	background-color:#6699FF;
 	width:210px; 
 	min-height:624px;
-	height:100%;
+	height:99%;
 	border:1px solid #333;
 	    }
 
@@ -169,6 +169,7 @@ p  {font-size:.8em; line-height:150%;padding:0px; margin:0px;}
 #audioControls table {
 	border-collapse:collapse;
 	font-size:.6em;	
+	margin:0 auto;
 		}
 	
 #audioControls a.rewind {  
@@ -235,7 +236,7 @@ p  {font-size:.8em; line-height:150%;padding:0px; margin:0px;}
 	}	
 	
 #navigationMenuBox {
-	height:63%;
+	height:64%;
 	overflow-y:auto;
 	overflow-x:hidden;
 	margin-left:2px;
